<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MugShot</string>
    <string name="menu_settings">Settings</string>

    <!-- status -->
    <string name="status">Status</string>
    <string name="frontCamera">Front camera not found</string>
    <string name="SystemAdmin">System admin is </string>
    <string name="systemAdminStatusButton">systemAdminStatusButton</string>

    <!-- settings -->
    <string name="settings">Settings</string>
    <string name="unlockCountSettingText">failed attempts before capture : 2</string>
    <string name="dropboxButton">Link with dropbox</string>

    <!-- Contacts -->
    <string name="contacts">Contacts</string>
    <string name="contactsExplain">If enabled, an sms, with the mobile location will be sent to below contacts</string>
    <string name="contact1Hint">Contact number 1</string>
    <string name="contact2Hint">Contact number 2</string>
    <string name="contact3Hint">Contact number 3</string>
    <string name="contactMessageHint">(Optional) Message you wish to add before the location. Ex.: \n\n \"Looks like someone from below address got hold of my mobile.\"</string>
    <string name="contactsButton">Update</string>

</resources>